# SberGame

./: CMakeLists.txt  main.cpp  units.txt  units_blue.txt  units_red.txt
includes/: Attack.h  Command.h  Game.h  Team.h  UnitFactory.h
includes/attacks/: DistanceAttack.h  NormalAttack.h
includes/heros/: Archer.h  HeavyHero.h  Hero.h  Hiller.h  Wagenburg.h  Wizard.h
includes/interfaces/: IAction.h  IAttack.h  ICanBeCloned.h  ICanBeHilled.h  IHero.h  ISpecAction.h  ITeam.h  IUnit.h
includes/logger/: Logger.h
includes/spec_actions/: CloneSpecAction.h  HillSpecAction.h
includes/team/: Team.h  TeamBuilder.h  TeamIterator.h  TeamReport.h  UnitNumberManager.h
src/: Attack.cpp  CompositeUnit.cpp  Game.cpp  Team.cpp  UnitFactory.cpp
src/attacks/: DistanceAttack.cpp  NormalAttack.cpp
src/heros/: Archer.cpp  HeavyHero.cpp  Hero.cpp  Hiller.cpp  Wagenburg.cpp  Wizard.cpp
src/logger/: Logger.cpp
src/spec_actions/: CloneSpecAction.cpp  HillSpecAction.cpp
src/team/: Team.cpp  TeamBuilder.cpp  TeamReport.cpp  UnitNumberManager.cpp
